# candy_crush_game

./: README.md
candycrush/: CMakeLists.txt  game_documentation.docx  main.cpp
candycrush/assets/: coin  enemy
